--- a/index.html
+++ b/index.html
@@ -8,6 +8,20 @@
     </head>
     <body>
 
+        <div id="container">
+            <h1>To-do List</h1>
+
+            <input type="text">
+
+            <ul>
+                <li><span>X</span> Go to potions class</li>
+                <li><span>X</span> Buy new robes</li>
+                <li><span>X</span> visit Hagrid</li>
+                <li><span>X</span> Feed Hedwig</li>
+            </ul>
+
+        </div>
+
         <script type="text/javascript" src="./assets/js/script.js"></script>
     </body>
 </html>
