Added css styling

--- a/index.html
+++ b/index.html
@@ -4,20 +4,22 @@
         <meta charset="utf-8">
         <title>Todo List</title>
         <link rel="stylesheet" href="./assets/css/main.css">
+        <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700" rel="stylesheet">
+        <link rel="stylesheet" href="./assets/js/lib/font-awesome-4.7.0/css/font-awesome.min.css">
         <script type="text/javascript" src="./assets/js/lib/jquery-3.2.1.min.js"></script>
     </head>
     <body>
 
         <div id="container">
-            <h1>To-do List</h1>
+            <h1>To-do List <i class="fa fa-plus"></i></h1>
 
-            <input type="text">
+            <input type="text" placeholder="Add New Todo">
 
             <ul>
-                <li><span>X</span> Go to potions class</li>
-                <li><span>X</span> Buy new robes</li>
-                <li><span>X</span> visit Hagrid</li>
-                <li><span>X</span> Feed Hedwig</li>
+                <li><span><i class="fa fa-trash"></i></span> Go to potions class</li>
+                <li><span><i class="fa fa-trash"></i></span> Buy new robes</li>
+                <li><span><i class="fa fa-trash"></i></span> visit Hagrid</li>
+                <li><span><i class="fa fa-trash"></i></span> Feed Hedwig</li>
             </ul>
 
         </div>
